# v2syslog

./: CMakeLists.txt  README.md  logset.c  logset.h  readconf.c  readconf.h  selflog.c  selflog.h  syslog_names.c  syslog_names.h  v2syslog.c  v2syslog.h  v2syslog_const.h  v2syslogd.c
man/: CMakeLists.txt  Makefile  v2closelog.3  v2syslog.3  v2syslog.3.md  v2syslog.3.ronn  v2syslog.conf.5  v2syslog.conf.5.md  v2syslog.conf.5.ronn  v2syslogd.1  v2syslogd.1.md  v2syslogd.1.ronn
